err/dash.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Compress-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dash'...
Listing './lib/python3.5/site-packages/dash/development'...
Listing './lib/python3.5/site-packages/dash-0.19.0.egg-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/ipython_genutils'...
Listing './lib/python3.5/site-packages/ipython_genutils/testing'...
Listing './lib/python3.5/site-packages/ipython_genutils/tests'...
Listing './lib/python3.5/site-packages/ipython_genutils-0.2.0.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/jupyter_core'...
Listing './lib/python3.5/site-packages/jupyter_core/tests'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython/nbextensions'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython/profile_default'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython/profile_default/static'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython/profile_default/static/custom'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython_empty'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython_empty/profile_default'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython_empty/profile_default/static'...
Listing './lib/python3.5/site-packages/jupyter_core/tests/dotipython_empty/profile_default/static/custom'...
Listing './lib/python3.5/site-packages/jupyter_core/utils'...
Listing './lib/python3.5/site-packages/jupyter_core-4.4.0.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/nbformat'...
Listing './lib/python3.5/site-packages/nbformat/tests'...
Listing './lib/python3.5/site-packages/nbformat/v1'...
Listing './lib/python3.5/site-packages/nbformat/v1/tests'...
Listing './lib/python3.5/site-packages/nbformat/v2'...
Listing './lib/python3.5/site-packages/nbformat/v2/tests'...
Listing './lib/python3.5/site-packages/nbformat/v3'...
Listing './lib/python3.5/site-packages/nbformat/v3/tests'...
Listing './lib/python3.5/site-packages/nbformat/v4'...
Listing './lib/python3.5/site-packages/nbformat/v4/tests'...
Listing './lib/python3.5/site-packages/nbformat-4.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plotly'...
Listing './lib/python3.5/site-packages/plotly/api'...
Listing './lib/python3.5/site-packages/plotly/api/v1'...
Listing './lib/python3.5/site-packages/plotly/api/v2'...
Listing './lib/python3.5/site-packages/plotly/dashboard_objs'...
Listing './lib/python3.5/site-packages/plotly/figure_factory'...
Listing './lib/python3.5/site-packages/plotly/graph_objs'...
Listing './lib/python3.5/site-packages/plotly/grid_objs'...
Listing './lib/python3.5/site-packages/plotly/matplotlylib'...
Listing './lib/python3.5/site-packages/plotly/matplotlylib/mplexporter'...
Listing './lib/python3.5/site-packages/plotly/matplotlylib/mplexporter/renderers'...
Listing './lib/python3.5/site-packages/plotly/offline'...
Listing './lib/python3.5/site-packages/plotly/package_data'...
Listing './lib/python3.5/site-packages/plotly/plotly'...
Listing './lib/python3.5/site-packages/plotly/plotly/chunked_requests'...
Listing './lib/python3.5/site-packages/plotly/presentation_objs'...
Listing './lib/python3.5/site-packages/plotly/widgets'...
Listing './lib/python3.5/site-packages/plotly-2.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/traitlets'...
Listing './lib/python3.5/site-packages/traitlets/config'...
Listing './lib/python3.5/site-packages/traitlets/config/tests'...
Listing './lib/python3.5/site-packages/traitlets/tests'...
Listing './lib/python3.5/site-packages/traitlets/utils'...
Listing './lib/python3.5/site-packages/traitlets/utils/tests'...
Listing './lib/python3.5/site-packages/traitlets-4.3.2.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
